# Summa-vision-can

./: .cursorrules  .gitignore  CHANGELOG_fixes.md  CLAUDE.md  DEBT.md  OPERATOR_PHASE_STATUS.md  PHASE0_BILINGUAL_GLOSSARY_EN_RU.md  ROADMAP_v8_FINAL.md  SESSION_HANDOFF.md  SPRINT_STATUS.md  Sprint_1.md  audit_report.md  docker-compose.dev.yml  docker-compose.override.yml.example  docker-compose.test.yml  docker-compose.yml  infographic-editor-stage2-polished.jsx  infographic-editor-stage3b-v2.jsx  phase_0.md  phase_1.5.md  phase_1.md  phase_1_5.md  phase_2.5.md  phase_2.md  phase_2_5.md  phase_3.md  phase_4.md  phase_5.md  polish.md  start_pg.sh  umma_visionSumma-vision-can  verify_debt.py
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements-dev.txt
backend/data/theme2_cards/: hero_kpi.json  metr_curves_full.json  ranked_bars.json  slope.json  waterfall.json
backend/migrations/: README.md  env.py
backend/migrations/versions/: 05de14ff39c6_initial.py  19d234e49fb3_add_composite_indexes_and_unique_.py  20260504_1200_phase_3_1d_publication_block_snapshot.py  2e15e3f4d1f2_add_cube_metadata_cache.py  2ecef76849a5_add_audit_events_table.py  378407da6dfa_add_cube_catalog_fts_indexes.py  421cd0e25873_add_unique_constraint_for_publication_.py  478d906c6410_add_semantic_value_cache.py  4b8b21989d14_add_esp_fields_to_lead.py  6703b5b8dfa4_add_cube_catalog_table.py  6e2e939f9cb6_add_publication_versioning.py  77889c0ea7e3_add_slug_to_publications.py  9a97f78cd377_remove_unique_constraint_from_dedupe_key.py  a1b2c3d4e5f6_add_product_id_to_semantic_mappings.py  (+13 more)
backend/prompts/: journalist.yaml
backend/schemas/: publication_response.schema.json
backend/scripts/: export_schemas.py  seed_semantic_mappings.py
backend/src/: main.py
backend/summa_vision_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py  test_main.py  test_publication_review_persistence.py
docs/: I18N_PLAN.md  (+30 more)
(+842 files in other folders)
